responsiveness finished, still to do some tweaks, rework for videoplayer

--- a/src/app/authentication/landingpage/landingpage.component.html
+++ b/src/app/authentication/landingpage/landingpage.component.html
@@ -15,6 +15,9 @@
           [formControl]="mail"
           (blur)="updateMailErrorMessage()"
           required
+          autocomplete="email"
+          autocapitalize="none"
+          inputmode="email"
         />
         @if (mail.invalid) {
         <mat-error> {{ mailErrorMessage() }} </mat-error>
