--- a/src/app/authentication/registration/step-1/step-1.component.html
+++ b/src/app/authentication/registration/step-1/step-1.component.html
@@ -19,7 +19,9 @@
           matInput
           placeholder="email@mail.com"
           formControlName="email"
-        
+          autocomplete="email"
+          autocapitalize="none"
+          inputmode="email"
           required
         />
       </mat-form-field>
