--- a/src/app/main-content/main/main.component.html
+++ b/src/app/main-content/main/main.component.html
@@ -1,5 +1,5 @@
 <section style="position: relative">
-  <app-logged-header></app-logged-header>
+  <app-logged-header [class.sticky]="isSticky"></app-logged-header>
 
   <div class="preview-description">
     <h1>Breakout</h1>
