--- a/src/app/main-content/profile/oversight/oversight.component.html
+++ b/src/app/main-content/profile/oversight/oversight.component.html
@@ -1,17 +1,20 @@
-<h3> Guten Tag <b>{{ globals.currentLoggedUser()?.first_name }} 
+<h3> Hi, <b>{{ globals.currentLoggedUser()?.first_name }} 
     {{ globals.currentLoggedUser()?.last_name }} </b></h3>
-<p>Hier kannst du deine Accounteinstellungen einsehen und überarbeiten, Videos hochladen </p>
-<p> und deine bereits hochgeladenen Videos ansehen und auch wieder löschen.</p>
+<p>Hier kannst du deine Accounteinstellungen einsehen und überarbeiten, Videos hochladen <br class="breakpoint">
+und deine bereits hochgeladenen Videos ansehen und auch wieder löschen.</p>
 
 <div (click)="fastLinkTo('user_settings')" class="fast-links mt48">
     <mat-icon>trending_flat</mat-icon>
     <span>Zu den Accounteinstellungen</span>
+    <span class="mobile-txt">Account</span>
 </div>
 <div (click)="fastLinkTo('my_videos')" class="fast-links">
     <mat-icon>trending_flat</mat-icon>
     <span>Sieh dir deine Videos an</span>
+    <span class="mobile-txt">Deine Videos</span>
 </div>
 <div (click)="fastLinkTo('upload')" class="fast-links">
     <mat-icon>trending_flat</mat-icon>
     <span>Lade ein neues Video hoch</span>
+    <span class="mobile-txt">Video hochladen</span>
 </div>
