--- a/src/app/main-content/profile/oversight/oversight.component.scss
+++ b/src/app/main-content/profile/oversight/oversight.component.scss
@@ -4,11 +4,17 @@
 h3 {
     font-size: 28px;
     margin: 0;
+    @media (max-width: 400px) {
+        font-size: 24px;
+    }
 }
 p {
     margin-bottom: 0px;
     font-size: 18px;
     font-weight: 500;
+    @media (max-width: 400px) {
+        font-size: 16px;
+    }
 }
 
 .fast-links {
@@ -26,12 +32,21 @@ p {
         width: 40px;
         font-size: 40px;
         transition: color 0.25s ease, transform 1.25s ease-out; /* Smooth transition for color and movement */
+        @media (max-width: 520px) {
+            height: 32px;
+            width: 32px;
+            font-size: 32px;
+        }
     }
 
     > span {
+        font-weight: 700;
         font-size: 28px;
         margin-left: 48px;
         transition: all ease, transform 1.25s ease-out;
+        @media (max-width: 520px) {
+            display: none;
+        }
     }
 
     &:hover {
@@ -43,6 +58,47 @@ p {
         > span {
             transform: translateX(80px);
         }
+        @media (max-width: 800px) {
+            > mat-icon {
+                transform: translateX(60px);
+            }
+            > span {
+                transform: translateX(60px);
+            }
+        }
+        @media (max-width: 530px) {
+            > mat-icon {
+                transform: translateX(40px);
+            }
+            > span {
+                transform: translateX(40px);
+            }
+        }
+        @media (max-width: 400px) {
+            > span {
+                transform: translateX(0);
+                color: #2e3edf;
+                transition: color 0.25s ease,
+            }
+            > mat-icon {
+                transform: translateX(0px);
+                color: #2e3edf;
+            }
+        }
+    }
+}
+
+.mobile-txt {
+    display: none;
+    @media (max-width: 520px) {
+        display: block !important;
+        font-size: 22px !important;
+        font-weight: 700;
+        margin-left: 36px;
+    }
+    @media (max-width: 400px) {
+        font-size: 18px;
+        margin-left: 32px;
     }
 }
 
@@ -50,14 +106,11 @@ p {
     margin-top: 48px;
 }
 
-
-// Animation
-
-@keyframes arrow {
-    from {left: 0;}
-    to {left: 540px;}
+.breakpoint {
+    @media (max-width: 1150px) {
+        display: none;
+    }
 }
-
 
 .mt48{
     margin-top: 48px;
