--- a/src/app/main-content/profile/profile.component.scss
+++ b/src/app/main-content/profile/profile.component.scss
@@ -1,152 +1,240 @@
 @import "../../../styles.scss";
 
-
 section {
-    @include dFlex(column, space-between, center);
+  @include dFlex(column, space-between, center);
+  width: 100%;
+  height: 100vh;
+  > .profile {
+    color: #ffffff;
     width: 100%;
-    height: 100vh;
-    > .profile {
-        color: #ffffff;
-        width: 100%;
-        max-width: 1920px;
-        // margin-top: -224px;
-        height: 820px;
-        @include dFlex(row, flex-start, flex-start);
-        > .left-nav {
-            @include dFlex(column, flex-start, flex-start);
-            width: 30%;
-            @media (max-width: 1920px) {
-                margin-left: 32px;
-            }
-            > .back-to-main {
-                @include dFlex(row, center,center);
-                gap: 16px;
-                margin: 24px 0px;
-                margin-bottom: 34px;
-                padding-left: 8px;
-                &:hover {
-                    margin-bottom: 32px;
-                    cursor: pointer;
-                    > span {
-                        font-size: 19px;
-                        font-weight: 600;
-                    }
-                    > mat-icon {
-                        font-size: 28px;
-                        height: 28px;
-                        width: 28px;
-                    }
-                }
-                > span {
-                    font-size: 18px;
-                }
-                > mat-icon {
-                    font-size: 26px;
-                    height: 26px;
-                    width: 26px;
-                }
-            }
-
-            /*Mat-list customizing at bottom*/
-
-        }
-
-        > .right-nav {
-            width: 70%;
-            @include dFlex(column, flex-start, flex-start);
-            @media (max-width: 1920px) {
-                margin-right: 32px;
-            }
-            > h1 {
-                font-size: 40px;
-                margin-top: 12px
-            }
-        }
-
-        
+    max-width: 1920px;
+    height: 820px;
+    gap: 8px;
+    @include dFlex(row, flex-start, flex-start);
+    @media (max-width: 560px) {
+      @include dFlex(column, center, center);
     }
+    > .left-nav {
+      @include dFlex(column, flex-start, flex-start);
+      width: 30%;
+      @media (max-width: 1920px) {
+        margin-left: 32px;
+      }
+      @media (max-width: 980px) {
+        width: 30%;
+      }
+      @media (max-width: 760px) {
+        margin-left: 16px;
+      }
+      @media (max-width: 740px) {
+        width: 20%;
+      }
+      @media (max-width: 640px) {
+        width: 12%;
+      }
+      @media (max-width: 560px) {
+        display: none;
+      }
+      > .back-to-main {
+        @include dFlex(row, center, center);
+        gap: 16px;
+        margin: 24px 0px;
+        margin-bottom: 34px;
+        padding-left: 8px;
+        &:hover {
+          margin-bottom: 32px;
+          cursor: pointer;
+          > span {
+            font-size: 19px;
+            font-weight: 600;
+          }
+          > mat-icon {
+            font-size: 28px;
+            height: 28px;
+            width: 28px;
+          }
+        }
+        > span {
+          font-size: 18px;
+        }
+        > mat-icon {
+          font-size: 26px;
+          height: 26px;
+          width: 26px;
+        }
+      }
+
+      /*Mat-list customizing at bottom*/
+    }
+
+    > .right-nav {
+      width: 70%;
+      @include dFlex(column, flex-start, flex-start);
+      @media (max-width: 1920px) {
+        margin-right: 32px;
+      }
+      @media (max-width: 980px) {
+        width: 70%;
+      }
+      @media (max-width: 760px) {
+        margin-right: 16px;
+      }
+      @media (max-width: 740px) {
+        width: 80%;
+      }
+      @media (max-width: 640px) {
+        width: 88%;
+      }
+      @media (max-width: 400px) {
+        width: 90%;
+        margin-right: 0 !important;
+      }
+      > h1 {
+        font-size: 40px;
+        margin-top: 12px;
+        @media (max-width: 400px) {
+          font-size: 36px;
+      }
+      }
+    }
+  }
 }
 
 /*Activeness*/
 
-.active{ 
-    background-color: rgba($color: #2e3edf, $alpha: 1.0);
-    > mat-icon {
-        color: #ffffff;
-        font-variation-settings: 'FILL' 1; 
-    }
+.active {
+  background-color: rgba($color: #2e3edf, $alpha: 1);
+  > mat-icon {
+    color: #ffffff;
+    font-variation-settings: "FILL" 1;
+  }
 }
 
-app-profile-header{
-    @include dFlex(row, center,center);
-    width: 100%;
+app-profile-header {
+  @include dFlex(row, center, center);
+  width: 100%;
 }
-
 
 .right-nav-placeholder {
-    @include dFlex(column, flex-start, flex-start);
+  @include dFlex(column, flex-start, flex-start);
 }
-
 
 /*Mat List Customizing*/
 
 .custom-list {
-    //margin-left: 8px;
-    margin-right: 8px;
-    > mat-list-item {
-      padding-left: 8px;  
-      padding-right: 16px;
-      border-radius: 4px;
-      margin-bottom: 16px;
-        &:hover {
-            background-color: rgba($color: #2e3edf, $alpha: 1.0);
-            cursor: pointer;
-            > mat-icon {
-                color: #ffffff;
-                font-variation-settings: 'FILL' 1;
-            }
-        }
-        > mat-icon {
-            color: #ffffff;
-        }
+  //margin-left: 8px;
+  margin-right: 8px;
+  > mat-list-item {
+    padding-left: 8px;
+    padding-right: 16px;
+    border-radius: 4px;
+    margin-bottom: 16px;
+    @media (max-width: 740px) {
+      padding: 0px 16px;
     }
+    &:hover {
+      background-color: rgba($color: #2e3edf, $alpha: 1);
+      cursor: pointer;
+      > mat-icon {
+        color: #ffffff;
+        font-variation-settings: "FILL" 1;
+      }
+    }
+    > mat-icon {
+      color: #ffffff;
+    }
+  }
 }
 
-.mdc-list-item.mdc-list-item--with-one-line .mdc-list-item__start{
-    margin: 0px !important;
-    margin-right: 16px !important;
+.list-txt {
+  @media (max-width: 740px) {
+    display: none;
+  }
+}
+
+.mdc-list-item.mdc-list-item--with-one-line .mdc-list-item__start {
+  margin: 0px !important;
+  margin-right: 16px !important;
+  @media (max-width: 740px) {
+    margin-right: 0px !important;
+  }
 }
 
 span {
-    color: #ffffff;
-    font-family: 'Raleway', sans-serif;
-    font-size: 18px;
-    font-weight: 700;
+  color: #ffffff;
+  font-family: "Raleway", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
 }
 
 .video-overlay {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    z-index: 20;
-    @include dFlex(row, center, flex-start);
-    padding-top: 124px;
-    > .v-overlay-container {
-        width: 900px;
-        background-color: rgba($color: #141414, $alpha: 1.0);
-        border-radius: 12px;
-        box-shadow: 15px 10px 10px -10px rgba(0, 0, 0, 0.5),
-                    -15px 10px 10px -10px rgba(0, 0, 0, 0.5);
-        //padding: 12px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 20;
+  @include dFlex(row, center, flex-start);
+  padding-top: 124px;
+  @media (max-width: 860px) {
+    position: fixed;
+    z-index: 1001;
+    padding-top: 0px;
+  }
+  > .v-overlay-container {
+    width: 900px;
+    background-color: rgba($color: #141414, $alpha: 1);
+    border-radius: 12px;
+    box-shadow: 15px 10px 10px -10px rgba(0, 0, 0, 0.5),
+      -15px 10px 10px -10px rgba(0, 0, 0, 0.5);
+    //padding: 12px;
+    @media (max-width: 860px) {
+      height: 100%;
+      width: 100%;
+      border: none;
+      border-radius: 0px;
+      box-shadow: none;
     }
-    .v-overlay-container-edit {
-        width: 900px;
-        background-color: rgba($color: #141414, $alpha: 1.0);
-        border: #5460e5 1px solid;
-        border-radius: 12px;
-        box-shadow: 15px 10px 10px -10px rgba(0, 0, 0, 0.5),
-                    -15px 10px 10px -10px rgba(0, 0, 0, 0.5);
+  }
+  .v-overlay-container-edit {
+    width: 900px;
+    background-color: rgba($color: #141414, $alpha: 1);
+    border: #5460e5 1px solid;
+    border-radius: 12px;
+    box-shadow: 15px 10px 10px -10px rgba(0, 0, 0, 0.5),
+      -15px 10px 10px -10px rgba(0, 0, 0, 0.5);
+  }
+}
+
+app-footer {
+  @media (max-width: 560px) {
+    display: none;
+  }
+}
+
+.mobile-nav {
+  display: none;
+  @media (max-width: 560px) {
+    display: block;
+    width: 100%;
+    margin: 0px 16px;
+    > .mobile-cont {
+      @include dFlex(row, space-between, center);
+      width: 100%;
+      height: 64px;
+      > div {
+        @include dFlex(row, center, center);
+        width: 20%;
+        height: 100%;
+        &:hover {
+          cursor: pointer;
+          background-color: #2e3edf;
+          > mat-icon {
+            color: #ffffff;
+            font-variation-settings: "FILL" 1;
+          }
+        }
+      }
     }
+  }
 }
