--- a/src/app/main-content/profile/user-settings/user-settings.component.scss
+++ b/src/app/main-content/profile/user-settings/user-settings.component.scss
@@ -4,6 +4,27 @@
   @include dFlex(column, center, flex-start);
   min-width: 600px;
   max-width: 1200px;
+  @media (max-width: 880px) {
+    min-width: 480px;
+  }
+  @media (max-width: 580px) {
+    min-width: 450px;
+  }
+  @media (max-width: 490px) {
+    min-width: 420px;
+  }
+  @media (max-width: 450px) {
+    min-width: 390px;
+  }
+  @media (max-width: 410px) {
+    min-width: 370px;
+  }
+  @media (max-width: 400px) {
+    min-width: 340px;
+  }
+  @media (max-width: 380px) {
+    min-width: 300px;
+  }
   > .form-group {
     width: 100%;
     @include dFlex(row, center, center);
@@ -24,6 +45,14 @@
     > .number {
       width: 30%;
     }
+    @media (max-width: 400px) {
+      > .street {
+        width: 60%;
+      }
+      > .number {
+        width: 40%;
+      }
+    }
   }
   > .btns {
     width: 100%;
@@ -40,8 +69,14 @@
       border: none;
       background-color: #2e3edf;
       outline: none;
+      @media (max-width: 450px) {
+        width: 35%;
+        font-size: 16px;
+        margin-bottom: 16px;
+      }
       &:hover {
         background-color: #5460e5;
+        
       }
     }
   }
@@ -54,6 +89,9 @@
   > span {
     > .video-count {
       color: #5460e5;
+    }
+    @media (max-width: 450px) {
+      font-size: 16px;
     }
   }
 }
@@ -69,13 +107,6 @@ input[type="number"] {
   appearance: textfield;
 }
 
-// input {
-//   color: #ffffff ;
-//   &::placeholder {
-//     color: #ffffff ;
-//   }
-// }
-
 .c-color {
   color: #ffffff !important;
   &::placeholder {
@@ -87,7 +118,7 @@ input[type="number"] {
   color: #a4a4a4 !important;
   &::placeholder {
     color: #a4a4a4 !important;
-  }
+  } 
 }
 
 ::ng-deep
@@ -95,7 +126,7 @@ input[type="number"] {
   .mdc-text-field--filled:not(.mdc-text-field--disabled) {
   background-color: rgba(255, 255, 255, 0.1) !important;
   border-radius: 12px;
-  border: 2px solid rgba($color: #2e3edf, $alpha: 1.0);
+  border: 2px solid rgba($color: #2e3edf, $alpha: 1);
 }
 
 ::ng-deep
@@ -104,6 +135,20 @@ input[type="number"] {
   background-color: rgba(255, 255, 255, 0.03) !important;
   border-radius: 12px;
   border: 2px solid rgba($color: #2e3edf, $alpha: 0.3);
+}
+
+::ng-deep .mat-mdc-form-field:not(.mat-form-field-disabled) .mat-mdc-floating-label.mdc-floating-label {
+  @media (max-width: 400px) {
+    font-size: 14px !important;
+  }
+}
+
+::ng-deep .mat-mdc-icon-button[disabled], .mat-mdc-icon-button.mat-mdc-button-disabled {
+  color: #a4a4a4 !important;
+}
+
+::ng-deep .mat-mdc-icon-button:not([disabled]) {
+  color: #ffffff !important;
 }
 
 ::ng-deep .mdc-line-ripple::after {
