--- a/src/app/main-content/slider-comp/video-item/video-item.component.scss
+++ b/src/app/main-content/slider-comp/video-item/video-item.component.scss
@@ -16,6 +16,14 @@
       0px 10px 10px -5px rgba(0, 0, 0, 0.7),
       0px 10px 10px -5px rgba(0, 0, 0, 0.7),
       0px 10px 10px -5px rgba(0, 0, 0, 0.7);
+    @media (max-width: 860px) {
+      height: 120px;
+      width: 200px;
+    }
+    @media (max-width: 470px) {
+      height: 90px;
+      width: 160px;
+    }
   }
   > .info-cont {
     transition: all 0.3s ease-in-out;
@@ -28,6 +36,14 @@
     margin-top: -160px;
     height: 160px;
     border-radius: 12px;
+    @media (max-width: 860px) {
+      height: 120px;
+      margin-top: -120px;
+    }
+    @media (max-width: 470px) {
+      height: 90px;
+      margin-top: -90px;
+    }
     > .info-head-invis {
       transition: all 0.3s ease-in-out;
       @include dFlex(row, space-between, center);
